Adding random story link generator.

--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Stories#index</h1>
-<p>Find me in app/views/stories/index.html.erb</p>
+A random link:
+<a href="<%= @story.link %>"><%= @story.name %></a>
